# toondb

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  NOTICE  README.md  azure-pipelines.yml  deny.toml  update_license.py  update_spdx.py
.azurepipelines/: nodejs-release.yml
benchmarks/: Cargo.toml  recall_benchmark.py
benchmarks/reports/: recall_benchmark_results.json
docs/: ARCHITECTURE.md  RELEASE_NOTES_0.2.9.md  RELEASE_NOTES_0.3.1.md  RELEASE_NOTES_0.3.3.md  RELEASE_NOTES_0.3.5.md  RELEASE_NOTES_0.4.0.md  SQL_COMPATIBILITY.md  (+1 more)
sochdb-client/: Cargo.toml
sochdb-client/src/: ast_query.rs  atomic_memory.rs  batch.rs  checkpoint.rs  column_access.rs  connection.rs  context_query.rs  crud.rs  error.rs  format.rs  graph.rs  intent_recovery.rs  lib.rs  path_query.rs  policy.rs  query.rs  queue.rs  recovery.rs  result.rs  routing.rs  schema.rs  semantic_cache.rs  sql_entry.rs  storage.rs  temporal_graph.rs  trace.rs  transaction.rs  vectors.rs  wal_atomic.rs
sochdb-grpc/: Cargo.toml  README.md
sochdb-grpc/src/: checkpoint_server.rs  collection_server.rs  context_server.rs  error.rs  graph_server.rs  kv_server.rs  lib.rs  main.rs  mcp_server.rs  namespace_server.rs  policy_server.rs  semantic_cache_server.rs  server.rs  trace_server.rs
sochdb-kernel/: Cargo.toml
sochdb-kernel/src/: atomic_claim.rs  error.rs  kernel_api.rs  lib.rs  page.rs  plugin.rs  plugin_hot_reload.rs  plugin_manifest.rs  python_sandbox.rs  transaction.rs  wal.rs  wasm_host_abi.rs  wasm_runtime.rs  wasm_sandbox_runtime.rs
sochdb-mcp/: Cargo.toml
sochdb-mcp/src/: framing.rs  jsonrpc.rs  main.rs  mcp.rs  tools.rs
sochdb-plugin-logging/: Cargo.toml
sochdb-plugin-logging/src/: lib.rs
sochdb-python/: Cargo.toml  pyproject.toml
sochdb-python/src/: lib.rs
sochdb-query/: Cargo.toml
sochdb-query/src/: agent_context.rs  bm25_filtered.rs  calc.rs  candidate_gate.rs  capability_token.rs  context_query.rs  cost_optimizer.rs  embedding_provider.rs  exact_token_counter.rs  filter_ir.rs  filtered_vector_search.rs  hybrid_retrieval.rs  lib.rs  memory_compaction.rs  metadata_index.rs  namespace.rs  optimizer_integration.rs  plugin_table.rs  query_optimizer.rs  semantic_triggers.rs  simd_filter.rs  soch_ql.rs  soch_ql_executor.rs  streaming_context.rs  temporal_decay.rs  token_budget.rs  topk_executor.rs  unified_fusion.rs
sochdb-query/src/sql/: ast.rs  bridge.rs  compatibility.rs  error.rs  lexer.rs  mod.rs  parser.rs  token.rs
sochdb-query/tests/: context_select_integration.rs  sql_integration.rs
sochdb-storage/: Cargo.toml
sochdb-storage/benches/: bench_compaction.rs  bench_comparison.rs  bench_concurrency.rs  bench_memory.rs  bench_point_read.rs  bench_recovery.rs  bench_scan.rs  bench_space_amp.rs  bench_write.rs  bench_write_amp.rs  bench_ycsb.rs  measurement_harness.rs  sochdb_benchmarks.rs
sochdb-storage/src/: actor.rs  adaptive_learned_index.rs  adaptive_memtable.rs  aries_recovery.rs  backend.rs  backup.rs  batch_wal.rs  block_checksum.rs  bloom.rs  checkpoint.rs  clr_learned_index.rs  columnar_compression.rs  columnar_wal.rs  compaction_policy.rs  compression.rs  concurrent_art.rs  cow_btree.rs  database.rs  deferred_index.rs  dict_compression.rs  direct_io.rs  dirty_tracking.rs  durable_storage.rs  epoch_arena.rs  epoch_mvcc.rs  ffi.rs  generational_slab.rs  group_commit.rs  hierarchical_ts.rs  hlc.rs  hybrid_store.rs  index_policy.rs  io_uring.rs  io_uring_wal.rs  ipc.rs  ipc_server.rs  key_buffer.rs  learned_index_integration.rs  lib.rs  lock.rs  (+42 more)
sochdb-storage/src/sketches/: adaptive_sketch.rs  count_min_sketch.rs  ddsketch.rs  exponential_histogram.rs  hyperloglog.rs  mod.rs
sochdb-storage/src/sstable/: block.rs  builder.rs  filter.rs  format.rs  mod.rs  table.rs
sochdb-storage/tests/: crash_tests.rs
sochdb-tools/: Cargo.toml
sochdb-tools/benches/: bulk_ingest.rs
sochdb-tools/src/: lib.rs  main.rs  server.rs
sochdb-vector/: Cargo.toml
sochdb-vector/src/: async_lsm.rs  async_rotation.rs  batch_segment_writer.rs  bm25.rs  compressed_routing.rs  cost_model.rs  filter_indexing.rs  guarantee_ladder.rs  hot_path_layout.rs  hybrid.rs  inverted_index.rs  lazy_segment.rs  lib.rs  list_bounds.rs  multi_vector.rs  portable_simd.rs  quantization_calibration.rs  query_telemetry.rs  segment_compaction.rs  simd_hadamard.rs  ssd_rerank.rs  tombstones.rs
toondb-client/: Cargo.toml  README.md
toondb-client/src/: ast_query.rs  atomic_memory.rs  checkpoint.rs  connection.rs  error.rs  format.rs  lib.rs  policy.rs  semantic_cache.rs  storage.rs  temporal_graph.rs  trace.rs
toondb-grpc/: Cargo.toml  README.md  build.rs
toondb-grpc/proto/: toondb.proto
toondb-grpc/src/: checkpoint_server.rs  collection_server.rs  context_server.rs  graph_server.rs  kv_server.rs  lib.rs  main.rs  mcp_server.rs  namespace_server.rs  policy_server.rs  semantic_cache_server.rs  trace_server.rs
toondb-index/: Cargo.toml
toondb-index/src/: adaptive_ef.rs  distance_cache.rs  hnsw.rs  hnsw_batch_parallel.rs  hnsw_parallel.rs  hnsw_staged.rs  johnson_lindenstrauss.rs  vector_simd.rs
toondb-kernel/: Cargo.toml
toondb-kernel/src/: python_sandbox.rs
toondb-mcp/: Cargo.toml
toondb-plugin-logging/: Cargo.toml
toondb-python/: pyproject.toml
toondb-query/: Cargo.toml
toondb-query/src/: hybrid_retrieval.rs  unified_fusion.rs
toondb-query/src/sql/: ast.rs  bridge.rs  compatibility.rs  lexer.rs  mod.rs  parser.rs  token.rs
toondb-storage/: Cargo.toml
toondb-storage/benches/: BENCH_RESULTS_2026-01-05_BASELINE.md  README.md  bench_compaction.rs  bench_comparison.rs  bench_concurrency.rs  bench_memory.rs  bench_point_read.rs  bench_recovery.rs  bench_scan.rs  bench_space_amp.rs  bench_write.rs  bench_write_amp.rs  bench_ycsb.rs  measurement_harness.rs
toondb-storage/src/: compaction_policy.rs  concurrent_art.rs  ffi.rs  ipc_server.rs  lib.rs  optimized_scan.rs  version_set.rs  wal_segment.rs
toondb-storage/src/sstable/: block.rs  builder.rs  filter.rs  format.rs  mod.rs  table.rs
toondb-studio/src-tauri/: Cargo.toml
toondb-tools/: Cargo.toml
toondb-tools/src/: server.rs
(+155 files in other folders)
