[workspace]
members = [
    "toondb-core",
    "toondb-kernel",
    "toondb-plugin-logging",
    "toondb-storage",
    "toondb-index",
    "toondb-query",
    "toondb-client",
    "toondb-mcp",
    "toondb-grpc",
    "toondb-wasm",
    "toondb-studio/src-tauri",
    "toondb-vector",
    "toondb-tools",
    "benchmarks",
]
# toondb-python is excluded from workspace - it must be built with maturin
# Use: cd toondb-python && maturin develop --release
exclude = ["toondb-python"]
resolver = "2"

[workspace.package]
version = "0.2.4"
edition = "2024"
authors = ["Sushanth <sushanth@toondb.dev>"]
license = "Apache-2.0"
repository = "https://github.com/toondb/toondb"
homepage = "https://toondb.dev"
documentation = "https://docs.toondb.dev"
keywords = ["database", "llm", "ai", "vector-search", "embedded"]
categories = ["database-implementations", "data-structures"]
rust-version = "1.85"

[workspace.dependencies]
# =============================================================================
# RUNTIME DESIGN DECISION: Storage Layer is Sync-First
# =============================================================================
#
# The core storage engine (toondb-storage) uses synchronous I/O:
# - std::fs for file operations
# - std::thread for background workers (GC, compaction)
# - parking_lot for synchronization
#
# This design choice mirrors SQLite's approach and provides:
# - Simpler embedded integration (no runtime to initialize)
# - Predictable latency (no executor scheduling jitter)
# - Smaller binary size (~500KB less without tokio runtime)
#
# Tokio is OPTIONAL and only needed for:
# - Server mode (toondb-mcp, toondb-server)
# - Async client libraries
#
# Crates should declare tokio as optional dependency when needed:
# ```
# [dependencies]
# tokio = { workspace = true, optional = true }
#
# [features]
# async = ["tokio"]
# ```
#
# =============================================================================

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Compression
lz4 = "1.24"
zstd = "0.13"

# Data structures
crossbeam-skiplist = "0.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Hashing
twox-hash = "1.6"
seahash = "4.1"
blake3 = "1.5"
hex = "0.4"

# Math and vectors
# NOTE: nalgebra was removed - unused (ndarray is used for vector ops)
ndarray = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging (lightweight, no OpenTelemetry)
tracing = "0.1"

# Async runtime - OPTIONAL for server/async use cases
# Storage core is sync-first; enable async via feature flags in individual crates
tokio = { version = "1.35", features = ["sync", "time", "macros", "rt"], optional = false }

# Testing
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

# Utilities
byteorder = "1.5"
memmap2 = "0.9"
dashmap = "5.5"
num_cpus = "1.16"
rand = "0.8"
moka = "0.12"

# CLI
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
