[package]
name = "benchmarks"
version = "0.2.9"
edition = "2021"

[dependencies]
toondb = { version = "0.2.9", path = "../toondb-client", features = ["embedded"] }
toondb-core = { version = "0.2.9", path = "../toondb-core" }
toondb-index = { version = "0.2.9", path = "../toondb-index" }
toondb-storage = { version = "0.2.9", path = "../toondb-storage" }
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
tempfile = "3.8"
criterion = "0.5"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-skiplist.workspace = true

# For perf-run
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hdrhistogram = "7.5"

# Optional jemalloc for benchmarking with better allocator
tikv-jemallocator = { version = "0.5", optional = true }

[features]
default = []
jemalloc = ["tikv-jemallocator", "toondb-core/jemalloc"]

[[bench]]
name = "microbench"
harness = false
path = "src/microbench.rs"

[[bin]]
name = "headtohead"
path = "src/bin/headtohead.rs"

[[bin]]
name = "perf-run"
path = "src/bin/perf_run.rs"

[[bin]]
name = "perf-harness"
path = "src/bin/perf_harness.rs"

[[bin]]
name = "insert-profile"
path = "insert_profile.rs"
