[package]
name = "sochdb-python"
version = "0.4.2"
edition = "2024"
authors = ["Sushanth <sushanth@sochdb.dev>"]
license = "Apache-2.0"
description = "SochDB Python native extension with PyO3 - zero-copy vector operations"

[lib]
name = "sochdb"
crate-type = ["cdylib"]

[dependencies]
# SochDB core libraries
sochdb-index = { path = "../sochdb-index" }
sochdb-core = { path = "../sochdb-core", features = ["analytics"] }
sochdb-storage = { path = "../sochdb-storage" }
sochdb = { path = "../sochdb-client" }

# PyO3 bindings
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }

# NumPy integration
numpy = { version = "0.24", features = ["nalgebra"] }

# ndarray for vector operations
ndarray = { version = "0.15", features = ["rayon"] }

# Parallel processing
rayon = "1.10"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.15"

[build-dependencies]
pyo3-build-config = "0.24"

# Features for conditional compilation
[features]
default = []
# Use abi3 for maximum compatibility (single wheel works for Python 3.9+)
abi3 = ["pyo3/abi3-py39"]
