[package]
name = "sochdb-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SochDB query engine (sync-first execution and vector query planning)"

[dependencies]
sochdb-core = { version = "0.4.2", path = "../sochdb-core" }
sochdb-storage = { version = "0.4.2", path = "../sochdb-storage" }
sochdb-index = { version = "0.4.2", path = "../sochdb-index" }
ndarray = "0.15"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
moka = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
once_cell = "1.19"
dirs = "5.0"
# tokio removed - query engine uses sync storage layer
semver = { version = "1.0", features = ["serde"] }
rand = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
regex = "1.10"

[dev-dependencies]
tempfile = { workspace = true }
# Tokio removed - query engine tests are sync-first
