[package]
name = "sochdb-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SochDB command-line tools for bulk operations, ETL, IPC server, and index management"

[[bin]]
name = "sochdb-bulk"
path = "src/main.rs"

[[bin]]
name = "sochdb-server"
path = "src/server.rs"

[dependencies]
sochdb-index = { version = "0.4.2", path = "../sochdb-index" }
sochdb-core = { version = "0.4.2", path = "../sochdb-core" }
sochdb-storage = { version = "0.4.2", path = "../sochdb-storage" }

# CLI
clap = { version = "4.5", features = ["derive", "color", "env"] }

# Memory-mapped I/O
memmap2.workspace = true

# Progress reporting
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Platform detection for bundled binaries
cfg-if = "1.0"

# Parallel processing
rayon = "1.10"

# Random number generation (for ordering)
rand = { workspace = true }

# System calls (for madvise, getrusage)
libc = "0.2"

# Signal handling for server
ctrlc = "3.4"

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bulk_ingest"
harness = false
