[package]
name = "sochdb-vector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Streaming elimination vector search engine for SochDB - CPU-first ANN with RDF + BPS"

[lib]
name = "sochdb_vector"
path = "src/lib.rs"

[dependencies]
# SochDB dependencies
sochdb-core = { version = "0.4.2", path = "../sochdb-core" }
sochdb-storage = { version = "0.4.2", path = "../sochdb-storage" }
sochdb-index = { version = "0.4.2", path = "../sochdb-index" }

# Memory mapping for segment files
memmap2 = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# Random/hash
rand = "0.8"
rand_xoshiro = "0.6"
ahash = "0.8"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# SIMD helpers
bytemuck = { version = "1.14", features = ["derive"] }
half = { version = "2.3", features = ["bytemuck"] }

# Numeric
ordered-float = "4.2"

# Temp files for testing
tempfile = "3.9"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = []
# Pure Rust SIMD implementations (always available, no C++ needed)
simd-kernels = []
# Portable SIMD using core::simd (requires nightly Rust)
portable-simd = []

# No build dependencies needed - pure Rust!
# The cc dependency has been removed since all SIMD
# kernels are now implemented in pure Rust.
