[package]
name = "toondb"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "ToonDB - LLM-optimized database with native vector search"
readme = "README.md"

[dependencies]
# Internal crates
toondb-core = { version = "0.2.9", path = "../toondb-core" }
toondb-storage = { version = "0.2.9", path = "../toondb-storage" }
toondb-index = { version = "0.2.9", path = "../toondb-index" }
toondb-query = { version = "0.2.9", path = "../toondb-query" }

# Synchronization
parking_lot = "0.12"
crossbeam-skiplist = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Byte ordering for safe column access
byteorder = "1.5"

# Error handling
thiserror = "1.0"

# Collections
hashbrown = "0.14"

# Regex for LIKE pattern matching
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
# Enable SIMD optimizations for column access
simd = []
# Enable embedded mode - uses Database kernel directly
embedded = []
