[package]
name = "toondb-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ToonDB gRPC vector index service for cross-language clients"

[dependencies]
toondb-index = { version = "0.2.8", path = "../toondb-index" }
toondb-core = { version = "0.2.8", path = "../toondb-core" }

# gRPC / Protocol Buffers
tonic = "0.13"
prost = "0.13"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "signal", "macros"] }
tokio-stream = "0.1"

# Utilities
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13"

[[bin]]
name = "toondb-grpc-server"
path = "src/main.rs"
