[package]
name = "toondb-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minimal MCP server for ToonDB - AI-native database"

[lib]
name = "toondb_mcp"
path = "src/lib.rs"

[[bin]]
name = "toondb-mcp"
path = "src/main.rs"

[features]
default = []
semantic-search = ["fastembed"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = "1.0"
toon-format = "0.4"

# Optional dependencies (enabled via features)
fastembed = { version = "4", optional = true }

# ToonDB crates
toondb = { version = "0.2.9", path = "../toondb-client", features = ["embedded"] }
toondb-core = { version = "0.2.9", path = "../toondb-core" }
toondb-query = { version = "0.2.9", path = "../toondb-query" }

# Minimal additional deps
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
