[package]
name = "toondb-plugin-logging"
version = "0.2.4"
edition = "2024"
description = "JSON structured logging plugin for ToonDB"
license = "Apache-2.0"

[dependencies]
toondb-kernel = { version = "0.2.4", path = "../toondb-kernel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
