[package]
name = "toondb-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ToonDB query engine (sync-first execution and vector query planning)"

[dependencies]
toondb-core = { version = "0.3.3", path = "../toondb-core" }
toondb-storage = { version = "0.3.3", path = "../toondb-storage" }
toondb-index = { version = "0.3.3", path = "../toondb-index" }
ndarray = "0.15"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
moka = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
once_cell = "1.19"
dirs = "5.0"
# tokio removed - query engine uses sync storage layer
semver = { version = "1.0", features = ["serde"] }
rand = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
regex = "1.10"

[dev-dependencies]
tempfile = { workspace = true }
# Tokio removed - query engine tests are sync-first
