[package]
name = "toondb-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ToonDB storage engine (WAL, block store, compaction, sync-first I/O)"

[lib]
# Build both static lib and shared library for FFI
crate-type = ["lib", "cdylib"]

[features]
# Default includes async support for server/MCP use cases
default = ["async"]
ffi = []
# Async support via Tokio - disable for embedded/sync-only deployments
# To build without async: cargo build --no-default-features
async = ["tokio"]
# Pure synchronous mode for embedded deployments (like SQLite)
# Reduces binary size by ~500KB and removes async runtime dependency
embedded-sync = []

[dependencies]
toondb-core = { version = "0.2.8", path = "../toondb-core" }
# Tokio is optional - only included when "async" feature is enabled
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"], optional = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
crossbeam-skiplist = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-epoch = "0.9"
parking_lot = { workspace = true }
lz4 = { workspace = true }
zstd = { workspace = true }
byteorder = { workspace = true }
memmap2 = { workspace = true }
dashmap = { workspace = true }
twox-hash = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
tracing = { workspace = true }
moka = { workspace = true, features = ["sync"] }
ahash = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
libc = "0.2"
sled = "0.34"
crc32fast = "1.3"
similar = "2.5"
uuid = { version = "1.8", features = ["v4"] }
smallvec = "1.13"
thread_local = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["uio"] }
io-uring = "0.6"

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "toondb_benchmarks"
harness = false
